--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				<h1>Thiago Silva</h1>
 				<p>Analista e Desenvolvedor de Software, Especialista em Desenvolvimento Web</p>
 				<div class="contact-info">
-					<p>Pioneiro José Augusto Gaspar, 115, Maringá, PR, 87.023-700 | +55 44 99851-3831</p>
+					<p>Rua, 999, Maringá, PR, 87.000-000 | +55 44 99999-9999</p>
 					<p>
 						webthiagosilva@gmail.com | <a href="https://linkedin.com/in/webthiagosilva">LinkedIn</a> |
 						<a href="https://github.com/webthiagosilva">GitHub</a>
